--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@types/node": "^16.11.61",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "dom": "^0.0.3",
     "heroicons": "^2.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "router": "^1.3.7",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
